...
          onTap: () => onOpenNodeSettings(node),
        ),
      if (node is RequestNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
          child: Text('Open', style: contextMenuTextStyle),
          onTap: () => context.read<ExplorerService>().openNode(node),
        ),
      if (node is RequestNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
...
          onTap: () => context.read<ExplorerService>().pasteNode(node),
        ),
      if (node is CollectionNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
          child: Text('Close Collection', style: contextMenuTextStyle),
          onTap: () => context.read<ExplorerService>().closeCollection(node),
        ),
      CustomPopupMenuItem(
        height: 30,
        shouldPop: true,
        child: Text('Rename', style: contextMenuTextStyle),
...
