...
      }
      return KeyEventResult.ignored;
    };

    final config = context.read<ConfigRepo>().get();
    if (!config.isTest) {
      // context.read<ExplorerService>().openCollection('/home/evan/Code/trayce/gui/test/support/collection1');
    }

    context.read<EventBus>().on<EventNewCollectionIntent>().listen((_) {
      _handleNewCollection();
    });

...
                  decoration: headerDecoration,
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.spaceBetween,
                    children: [
                      const Text('Editor', style: TextStyle(color: textColor, fontSize: 13)),
                      IconButton(
                        key: const Key('collection_btn'),
                        icon: const Icon(Icons.more_horiz, color: textColor, size: 16),
                        padding: const EdgeInsets.only(right: 5),
                        constraints: const BoxConstraints(),
                        onPressed:
                            () => showRootMenu(
                              context,
...
