...
    ),
    color: contextMenuColor,
    shape: contextMenuShape,
    items: [
      PopupMenuItem(
        height: 30,
        child: Text('Open Collection', style: contextMenuTextStyle),
        onTap: () => onOpenCollection(),
      ),
      PopupMenuItem(
        height: 30,
        child: Text('New Collection', style: contextMenuTextStyle),
        onTap: () {
...
